<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/login_application_title"
            android:textColor="@color/colorGray"
            android:textSize="40sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/login_email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="96dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/login_email_helper"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/login_password_helper"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorGreen"
            android:textColor="@color/colorWhite"
            android:text="@string/login_login_button"/>

        <Button
            android:id="@+id/login_register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:text="@string/login_register_button"/>

    </LinearLayout>

</ScrollView>