<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_register"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/register_name_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/register_name_helper"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/register_email_helper"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/register_password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/register_password_helper"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <EditText
            android:id="@+id/register_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/register_password_helper"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <Button
            android:id="@+id/register_register_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:text="@string/login_register_button"/>

    </LinearLayout>

</ScrollView>